infra/argocd/overlays/playground/patch-priority-class.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: placeholder
spec:
  template:
    spec:
      priorityClassName: system-cluster-critical
